--- a/index.html
+++ b/index.html
@@ -77,10 +77,12 @@
 	   </div>
 	  </div>
 	</div>
-       <div cass="row section1">
+       <div class="row section1">
 	 <div class="span12">
-	   Marketing Section 2
+	   Marketing Section 1
 	 </div>
+	<div class="row section2">
+	  Marketing Section 2
 	</div>
        <div class="row faq">
 	 <div class="span12">
