--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html?>
-<html lang = "en">
+<html lang="en">
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <title>My First Bitstarter</title>
     <link type="text/css" rel="stylesheet"
 	  href="https://d396qusza40orc.cloudfront.net/startup%2Fbootstrap-2.3.2.css">
@@ -24,7 +24,7 @@
         text-align: center;
       }
       .video {
-        / Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
+        /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
         height: 124px;
         line-height: 124px;
       }
