--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My First Bitstarter</title>
     <link type="text/css" rel="stylesheet"
-	  href="https://d396qusza40orc.cloudfront.net/startup%2Fbootstrap-2.3.2.css">
+	  href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fboootstrap-2.3.2.css">
     <style type="text/css">
       body {
         padding-top: 20px;
@@ -69,7 +69,7 @@
 	   <div class="thermometer">
 	     Thermometer
 	   </div>
-	   <div clas="order">
+	   <div class="order">
 	     Order
 	   </div>
 	   <div class="social">
@@ -81,8 +81,11 @@
 	 <div class="span12">
 	   Marketing Section 1
 	 </div>
+	 </div>
 	<div class="row section2">
-	  Marketing Section 2
+	  <div class="span12"
+	       Marketing Section 2
+	  </div>     
 	</div>
        <div class="row faq">
 	 <div class="span12">
