--- a/index.html
+++ b/index.html
@@ -14,14 +14,44 @@
 	<style type="text/css">
 	
 
-
-	<link type="text/css" rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css"> 
+	/* large desktop */
+	@media (min-width: 980px) {
+	  body {
+		padding-top: 60px;
+	  }
+	 .linediv-l {
+	   border-right: 1px white solid;
+	  }
+	 .linediv-r {
+	   border-left: 1px white solid;
+	  }
+	 }
     
-    <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 40px;
-      }
+	/* Landscape phones and down */
+	@media (max-width: 480px) {
+	  .copy {
+		padding: 2.5% 10%;
+	  }
+	  .linediv-l {
+		border-bottom: 1px white solid;
+	  }
+	  .linediv-r {
+	    border-top: 1px white solid;
+	  }
+	 }
+	
+	/* All form factors */
+
+	/* Main body and headings */	
+    body {
+	  font-family: 'Open Sans', Helvetica, Arial,sans-serif;
+	}        
+	.heading, .subheading {
+		font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+		text-align: center;
+	}
+
+
       .container {
         width: 960px;
       }
