--- a/index.html
+++ b/index.html
@@ -78,10 +78,58 @@
 	  color: white;
 	}
 
+	/* Marketing Copy and Footer */
+	.copy {
+	  padding-top: 2.5%;
+	  padding-bottom: 2.5%;
+	  text-align: justify;
+	}
+	.asset {
+	  padding: 2.5% 0%;
+	}
+	.footer {
+	  color: #cccccc;
+	  text-align: center;
+	}
+	.footer p {
+	  font-size: 11px;
+	}
+	.footer a {
+	  color: #ccccff;
+	}
+  </style>
+</head>
+<body>
+
+
+  <!-- Mobile-friendly navbar adapted from example. -->
+  <!-- httpL://twitter.github.io/bootsrap/examples/starter-template.html -->
+  <div class="navbar navbar-inverse navbar-fixed-top">
+	<div class="navbar-inner">
+	  <div class="container">
+		<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+		  <span class="icon-bar"></span>
+		  <span class="icon-bar"></span>
+		  <span class="icon-bar"></span>
+		</button>
+		< a class="brand" href="#">Bitstarter</a> 
+		<div class="nav-collapse collapse">
+		  <ul class="nav">
+			<li class="active"><a href="#">Home</a></li>
+			<li><a href="#about">About</a></li>
+			<li><a href="#contact">Contact</a></li>
+		  </ul>
+		</div><!--/.nav-collapse -->
+	  </div>
+	</div>
+  </div>
+
+			
 
 
 
 
+	
 
 .video {
         /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
