WIP: Marketing Copy

--- a/index.html
+++ b/index.html
@@ -193,90 +193,28 @@
 	</div>
   </div>
 
-
-
-	<div class="container">
-				
-
-
-
-
-	
-
-.video {
-        /* Internal borders have 1px width, thus need to add 4 x 1px to 120px. */
-        height: 124px;
-        line-height: 124px;
-      }
-      .thermometer, .order, .social {
-        /* line-height to vertically center: http://phrogz.net/css/vertical-align/index.html */
-        height: 40px;
-        line-height: 40px;
-      }
-      div.row {
-        border: 1px solid;
-      }
-    </style>
-   </head>
-   <body>
-     <div class="container">
-       <div class="row navigation">
-	 <div class="span2 logo">
-	   Logo
-	 </div>
-	  <div class="span6 blank">
-	    Blank
-	  </div>
-	 <div class="span4 about">
-	   About
-	 </div>
-	</div> 
-       <div class="row heading">
-	 <div class="span12">
-	   <h1>Bitstarter Title</h1>
-	 </div>
+  <!-- Beyond this part the marketing copty begins. -->
+  <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
+  <!-- https:/twitter.github.io/bootstrap/base-css.html#images -->
+  <!--placehold.it -->
+  <div class="row-fluid section1">
+	<div class="span5 offset1 asset">
+	  <img class="img=polaroid" src="http://placehold.it/480x300">
 	</div>
-       <div class="row subheading">
-	 <div class="span12">
-	   <p class="lead">This is my first bitstarter project.</p>
-	 </div>
+	<div class="span5 copy">
+	  <p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.
+	  </p>
 	</div>
-       <div class="row pitch">
-	 <div class="span6 video">
-	   Video
-	 </div>
-	 <div class="span6">
-	   <div class="thermometer">
-	     Thermometer
-	   </div>
-	   <div class="order">
-	     Order
-	   </div>
-	   <div class="social">
-	     Social
-	   </div>
-	  </div>
+  </div>
+
+  <div class="row-fluid section2">
+	<div class="span5 offset1 copy copy-right">
+	  <p>
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.
+	  </p>
 	</div>
-       <div class="row section1">
-	 <div class="span12">
-	   Marketing Section 1
-	 </div>
+	<div class="span5 asset">
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
 	</div>
-	<div class="row section2">
-	  <div class="span12">
-	       Marketing Section 2
-	  </div>     
-	</div>
-       <div class="row faq">
-	 <div class="span12">
-	   FAQ
-	  </div>
-	 </div>
-       <div class="row footer">
-	 <div class="span12">
-	   Footer
-	  </div>
-	 </div>
-       </div>
-     </body>
-   </html>
+  </div>	
