--- a/index.html
+++ b/index.html
@@ -217,4 +217,39 @@
 	<div class="span5 asset">
 	  <img class="img-polaroid" src="http://placehold.it/480x300">
 	</div>
-  </div>	
+  </div>
+
+  <!-- For the FAQ, we introduce a little bit of JS, using the accordion. -->
+  <!-- This brings in jquery.js and bootstraop.js as depenenceis. -->
+  <!-- http:/twitter.github.io/bootstrap/javascript.html#collapse -->
+  <div class="row-fluid faq">
+	<div class="spoan10 offset1">
+	  <h3>FAQ</h3>
+	  <div class="accordion" id-"accordion2">
+		<div class="accordion-group">
+		  <div class="accordion-heading">
+			<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+			  What does FAQ stand for?
+			</a>
+		  </div>
+		  <div id="collapseOne" class="accordion-body collapse">
+			<div class="accordion-inner">
+			  Frequently Asked Question.
+			</div>
+		  </div>
+		</div>
+		<div class="accordion-group">
+		  <div class="accordion-heading">
+		    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+			  What's a Frequently Asked Question?
+			</a>
+		  </div>
+		  <div id="colllapseTwo" class="accordion-body collapse">
+			<div class="accordion-inner">
+			  A question which is commonly asked by users.
+			</div>
+		  </div>
+		</div>
+	  </div>
+
+		  	
