WIP: Corrected various typos.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html?>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -44,7 +44,7 @@
 
 	/* Main body and headings */	
     body {
-	  font-family: 'Open Sans', Helvetica, Arial,sans-serif;
+	  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 	}        
 	.heading, .subheading {
 		font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
@@ -99,8 +99,8 @@
 	}
   </style>
 </head>
-<body>
 
+<body>
 
   <!-- Mobile-friendly navbar adapted from example. -->
   <!-- httpL://twitter.github.io/bootsrap/examples/starter-template.html -->
@@ -182,7 +182,7 @@
 	  <div class="span6 offset3 order">
 		<!-- Standard Bootstrap button/ -->
 		<!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-		<button class="btn btn-siccess btn-large">Preorder</button>
+		<button class="btn btn-success btn-large">Preorder</button>
 	  </div>
 	  <div class="span8 offset2 social">
 		<!-- Social buttons are not included in default Bootstrao. -->
@@ -199,11 +199,16 @@
   <!--placehold.it -->
   <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
-	  <img class="img=polaroid" src="http://placehold.it/480x300">
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
 	</div>
 	<div class="span5 copy">
 	  <p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer 
+		nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi.
+		Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent
+		mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum 
+		lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent 
+		per conubia nostra, per inceptos himenaeos. 
 	  </p>
 	</div>
   </div>
@@ -211,7 +216,12 @@
   <div class="row-fluid section2">
 	<div class="span5 offset1 copy copy-right">
 	  <p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla.
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec 
+		odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla 
+		quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent 
+		mauris. Fusce nec tellus sed augue semper porta. Mauris massa. 
+		Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad 
+		litora torquent per conubia nostra, per inceptos himenaeos. Curabitur 
 	  </p>
 	</div>
 	<div class="span5 asset">
@@ -223,7 +233,7 @@
   <!-- This brings in jquery.js and bootstraop.js as depenenceis. -->
   <!-- http:/twitter.github.io/bootstrap/javascript.html#collapse -->
   <div class="row-fluid faq">
-	<div class="spoan10 offset1">
+	<div class="span10 offset1">
 	  <h3>FAQ</h3>
 	  <div class="accordion" id-"accordion2">
 		<div class="accordion-group">
@@ -251,5 +261,19 @@
 		  </div>
 		</div>
 	  </div>
+	</div>
 
-		  	
+</div>	
+
+	<!-- Not crucial, but we put this under a CC BySA 3.0 license. -->
+	<!-- http://creativecommons.org/licenses/ -->
+	<div class="row-fluid footer">
+  	  <div class="span12">
+		<p>This work is licensed under the
+		  <a href="http://creativecommons.org/licenses/bysa/3./">CC By-SA 3.0
+		  </a>, without all the cruf that would otherwise be put at the bottom of the page.</p>
+  	  </div>
+	</div>
+  </div>
+</body>
+</html>	  	
