Fixed bugs in thermometer and FAQ.

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 		<!-- Bootstrap progress bar -->
 		<!-- http://twitter.github.io/bootstrap/components.html#progress -->
 		<div class="thermometer progress active">
-		  <div class="bar bar-success" style="width: 60%;"</div>
+		  <div class="bar bar-success" style="width: 60%;"></div>
 		  <div class="bar bar-warning" style="width: 40%;"></div>
 	 	</div>
 	  </div>
@@ -235,7 +235,7 @@
   <div class="row-fluid faq">
 	<div class="span10 offset1">
 	  <h3>FAQ</h3>
-	  <div class="accordion" id-"accordion2">
+	  <div class="accordion" id="accordion2">
 		<div class="accordion-group">
 		  <div class="accordion-heading">
 			<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
@@ -254,7 +254,7 @@
 			  What's a Frequently Asked Question?
 			</a>
 		  </div>
-		  <div id="colllapseTwo" class="accordion-body collapse">
+		  <div id="collapseTwo" class="accordion-body collapse">
 			<div class="accordion-inner">
 			  A question which is commonly asked by users.
 			</div>
