--- a/index.html
+++ b/index.html
@@ -208,7 +208,10 @@
 		Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent
 		mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum 
 		lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent 
-		per conubia nostra, per inceptos himenaeos. 
+		per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet,
+		consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus
+		ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. 
+		Duis sagittis ipsum. 
 	  </p>
 	</div>
   </div>
@@ -216,12 +219,15 @@
   <div class="row-fluid section2">
 	<div class="span5 offset1 copy copy-right">
 	  <p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec 
-		odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla 
-		quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent 
-		mauris. Fusce nec tellus sed augue semper porta. Mauris massa. 
-		Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad 
-		litora torquent per conubia nostra, per inceptos himenaeos. Curabitur 
+	   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+           nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi.
+           Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent
+           mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum
+           lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent
+           per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet,
+           consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus
+           ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
+           Duis sagittis ipsum.
 	  </p>
 	</div>
 	<div class="span5 asset">
