--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>SpecialParent</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">    
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -133,19 +133,22 @@
 	  <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
 	<div class="row-fluid heading">
 	  <div class="span12">
-		<h1>Product</h1>
+		<!--	<h1>Product</h1> -->
+		<p></p>	
+		<img class"img-polaroid" src="https://s3.amazonaws.com/sp_assets/images/specialparent_logo.png" alt="Special Parent" height="50" width="500">
 	  </div>
 	</div>
 	<div class="row-fluid subheading">
 	  <div class="span12">
 		<!-- Special typography from Bootstrap for lead paragraph. -->
 		<!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-		<p class="lead">One sentence description.</p>
+		<p class="lead">Working together to help our kids.</p>
 	  </div>
 	</div>
 	<div class="row-fluid pitch">
 	  <div class="span5 offset1 video">
 		<img class="img-polaroid" src="http://placehold.it/480x300">
+	  
 	  </div>
 
 	<!-- We define a new 'actions' div to contain statistics, order, and share button. -->
@@ -156,17 +159,17 @@
 			<!-- linediv-l and linediv-r give dividing lines that look different in horizontal
 			and vertical layouts, illustrating media queries. -->
 			<div class="linediv-l">
-			<h3>1000</h3> <p>backers</p>
+			<h3>2</h3> <p>backers</p>
 			</div>
 		  </div>
 		  <div class="span4">
 			<div class="linediv-c">
-			  <h3>$6000</h3> <p>of $10,000</p>
+			  <h3>$200</h3> <p>of $15,000</p>
 			</div>
 		  </div>
 		  <div class="span4">
 			<div class="linediv-r">
-			<h3>10</h3> <p>days left</p>
+			<h3>45</h3> <p>days left</p>
 			</div>
 		  </div>
 		</div>
@@ -175,8 +178,8 @@
 		<!-- Bootstrap progress bar -->
 		<!-- http://twitter.github.io/bootstrap/components.html#progress -->
 		<div class="thermometer progress active">
-		  <div class="bar bar-success" style="width: 60%;"></div>
-		  <div class="bar bar-warning" style="width: 40%;"></div>
+		  <div class="bar bar-success" style="width: 1.3%;"></div>
+		  <div class="bar bar-warning" style="width: 98.7%;"></div>
 	 	</div>
 	  </div>
 	  <div class="span6 offset3 order">
@@ -199,39 +202,34 @@
   <!--placehold.it -->
   <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <!-- <img class="img-polaroid" src="http://placehold.it/480x300"> -->
+	  <img class="img-polaroid" src="https://s3.amazonaws.com/sp_assets/images/stock-illustration-24867531-social-circles-1.jpg" alt="Community" width="480">
 	</div>
 	<div class="span5 copy">
-	  <p>
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer 
-		nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi.
-		Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent
-		mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum 
-		lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent 
-		per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet,
-		consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus
-		ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. 
-		Duis sagittis ipsum. 
+	  <h1>You're not alone.</h1>
+	  <p>	
+		Raising a child isn't easy. Raising a child with special needs is even more difficult.
+		There's no manual or map to help you navigate through the confusing and stressful
+		maze of advocacy, therapies, medical treatments, education, IEPs, etc, etc.
+		Millions of parents just like you have had to deal with precisely the same challenges. 
+		They will help you!
 	  </p>
 	</div>
   </div>
 
   <div class="row-fluid section2">
 	<div class="span5 offset1 copy copy-right">
-	  <p>
-	   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-           nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi.
-           Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent
-           mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum
-           lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent
-           per conubia nostra, per inceptos himenaeos. Lorem ipsum dolor sit amet,
-           consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus
-           ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet.
-           Duis sagittis ipsum.
-	  </p>
+	   <h1>Pay it forward</h1>
+	   <p>
+	   Found something useful on this site? Fantastic! Take it and use it to help you and your child.
+	   Just be sure to pay it forward and, when convenient, leave something for those who follow you.
+	   That "something" could be anything. e.g. Words of encouragement, a great website that you'd like 
+	   to share with others. We'll leave it up to you.	   
+	   </p>
 	</div>
 	<div class="span5 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <!-- <img class="img-polaroid" src="http://placehold.it/480x300"> -->
+	  <img class="img-polaroid" src="https://s3.amazonaws.com/sp_assets/images/stock-illustration-9023721-life-preserver-1.jpg">
 	</div>
   </div>
 
@@ -245,24 +243,24 @@
 		<div class="accordion-group">
 		  <div class="accordion-heading">
 			<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-			  What does FAQ stand for?
+			  What is SpecialParent?
 			</a>
 		  </div>
 		  <div id="collapseOne" class="accordion-body collapse">
 			<div class="accordion-inner">
-			  Frequently Asked Question.
+				SpecialParent is a new kind of social network for parents, therapists, educators and care-givers of children with special needs.			  
 			</div>
 		  </div>
 		</div>
 		<div class="accordion-group">
 		  <div class="accordion-heading">
 		    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-			  What's a Frequently Asked Question?
+			 How can I learn more? 	
 			</a>
 		  </div>
 		  <div id="collapseTwo" class="accordion-body collapse">
 			<div class="accordion-inner">
-			  A question which is commonly asked by users.
+			  Check back very soon and this page will have more details. Or, if you prefer, follow us on <a href="https://www.facebook.com/specialparent">Facebook. 
 			</div>
 		  </div>
 		</div>
@@ -275,9 +273,7 @@
 	<!-- http://creativecommons.org/licenses/ -->
 	<div class="row-fluid footer">
   	  <div class="span12">
-		<p>This work is licensed under the
-		  <a href="http://creativecommons.org/licenses/bysa/3./">CC By-SA 3.0
-		  </a>, without all the cruf that would otherwise be put at the bottom of the page.</p>
+		<p>Copyright 2013 Special Parent. All rights reserved.
   	  </div>
 	</div>
   </div>
