--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 		  <span class="icon-bar"></span>
 		  <span class="icon-bar"></span>
 		</button>
-		< a class="brand" href="#">Bitstarter</a> 
+		<a class="brand" href="#">SpecialParent</a> 
 		<div class="nav-collapse collapse">
 		  <ul class="nav">
 			<li class="active"><a href="#">Home</a></li>
@@ -209,7 +209,7 @@
 	  <h1>You're not alone.</h1>
 	  <p>	
 		Raising a child isn't easy. Raising a child with special needs is even more difficult.
-		There's no manual or map to help you navigate through the confusing and stressful
+		There's no manual or map to help you navigate the confusing and stressful
 		maze of advocacy, therapies, medical treatments, education, IEPs, etc, etc.
 		Millions of parents just like you have had to deal with precisely the same challenges. 
 		They will help you!
