Added links to Twitter and Facebook.

--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@
 	  <div class="span8 offset2 social">
 		<!-- Social buttons are not included in default Bootstrao. -->
 		<!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-		<button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-		<button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+		<a href ="https://twitter.com/specialparents" <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button></a>
+		<a href ="https:/www.facebook.com/specialparent" <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button></a>
 	  </div>
 	</div>
   </div>
@@ -248,7 +248,7 @@
 		  </div>
 		  <div id="collapseOne" class="accordion-body collapse">
 			<div class="accordion-inner">
-				SpecialParent is a new kind of social network for parents, therapists, educators and care-givers of children with special needs.			  
+				SpecialParent is a new kind of social network for parents, therapists, educators and caregivers of children with special needs.			  
 			</div>
 		  </div>
 		</div>
