Updated copy. Fixed links to Twitter and Facebook in FAQ.

--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
 	  <img class="img-polaroid" src="https://s3.amazonaws.com/sp_assets/images/stock-illustration-24867531-social-circles-1.jpg" alt="Community" width="480">
 	</div>
 	<div class="span5 copy">
-	  <h1>You're not alone.</h1>
+	  <h2>You're not alone.</h2>
 	  <p>	
-		Raising a child isn't easy. Raising a child with special needs is even more difficult.
+		Raising and caring for a child with special needs is more difficult.
 		There's no manual or map to help you navigate the confusing and stressful
 		maze of advocacy, therapies, medical treatments, education, IEPs, etc, etc.
 		Millions of parents just like you have had to deal with precisely the same challenges. 
@@ -218,14 +218,13 @@
   </div>
 
   <div class="row-fluid section2">
+	
 	<div class="span5 offset1 copy copy-right">
-	   <h1>Pay it forward</h1>
+	   <h2>Strength in numbers</h2>
 	   <p>
-	   Found something useful on this site? Fantastic! Take it and use it to help you and your child.
-	   Just be sure to pay it forward and, when convenient, leave something for those who follow you.
-	   That "something" could be anything. e.g. Words of encouragement, a great website that you'd like 
-	   to share with others. We'll leave it up to you.	   
-	   </p>
+	   	SpecialParent is a new kind of social network specially designed for parents, therapists, educators and caregivers of children of special needs.
+		It will help you find answers and support!
+	 </p>
 	</div>
 	<div class="span5 asset">
 	  <!-- <img class="img-polaroid" src="http://placehold.it/480x300"> -->
@@ -260,7 +259,8 @@
 		  </div>
 		  <div id="collapseTwo" class="accordion-body collapse">
 			<div class="accordion-inner">
-			  Check back very soon and this page will have more details. Or, if you prefer, follow us on <a href="https://www.facebook.com/specialparent">Facebook. 
+			  Check back very soon and this page will have more details. Or, if you prefer, follow us on <a href="https://www.twitter.com/specialparents">Twitter</a> or
+			 <a href="https://www.facebook.com/specialparent">Facebook.</a> 
 			</div>
 		  </div>
 		</div>
