--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 	  <p>	
 		Raising and caring for a child with special needs is more difficult.
 		There's no manual or map to help you navigate the confusing and stressful
-		maze of advocacy, therapies, medical treatments, education, IEPs, etc, etc.
+		maze of advocacy, therapies, medical treatments, education, IEPs, etc.
 		Millions of parents just like you have had to deal with precisely the same challenges. 
 		They will help you!
 	  </p>
