Minor text changes.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 	  <div class="span12">
 		<!-- Special typography from Bootstrap for lead paragraph. -->
 		<!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-		<p class="lead">Working together to help our kids.</p>
+		<p class="lead">The Special Needs Community.</p>
 	  </div>
 	</div>
 	<div class="row-fluid pitch">
