Edited text in index.html

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 		There's no manual or map to help you navigate the confusing and stressful
 		maze of advocacy, therapies, medical treatments, education, IEPs, etc.
 		Millions of parents just like you have had to deal with precisely the same challenges. 
-		They will help you!
+		As a community, we will help each other!		
 	  </p>
 	</div>
   </div>
