Updated copy in index.html

--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
 	<div class="span5 copy">
 	  <h2>You're not alone.</h2>
 	  <p>	
-		Raising and caring for a child with special needs is more difficult.
-		There's no manual or map to help you navigate the confusing and stressful
-		maze of advocacy, therapies, medical treatments, education, IEPs, etc.
-		Millions of parents just like you have had to deal with precisely the same challenges. 
-		As a community, we will help each other!		
+		Raising and caring for a child with special needs is hard work!
+		There's no manual to help you navigate the confusing and stressful
+		maze of advocacy, therapies, medical treatments, education, IEPs, etc.</br></br>
+		Millions of parents just like you are dealing with precisely the same challenges. </br></br>
+		Finally, there's a place to call our own where we can help each other. 		
 	  </p>
 	</div>
   </div>
@@ -220,9 +220,10 @@
   <div class="row-fluid section2">
 	
 	<div class="span5 offset1 copy copy-right">
-	   <h2>Strength in numbers</h2>
+	   <h2>Knowledge is Power</h2>
 	   <p>
-	   	SpecialParent is a new kind of social network specially designed for parents, therapists, educators and caregivers of children of special needs.
+	   	Let's face it. Knowledge is power. It's hard to advocate for services when you don't even know what's available.</br></br>
+	   	It's only when you hear what other children are receiving that you begin to know what's possible.
 		It will help you find answers and support!
 	 </p>
 	</div>
