--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 	  <div class="span12">
 		<!--	<h1>Product</h1> -->
 		<p></p>	
-		<img class"img-polaroid" src="https://s3.amazonaws.com/sp_assets/images/specialparent_logo.png" alt="Special Parent" height="50" width="500">
+		<img class"img-polaroid" alt="Special Parent" src="https://s3.amazonaws.com/sp_assets/images/specialparent_logo.png"  height="50" width="500">
 	  </div>
 	</div>
 	<div class="row-fluid subheading">
@@ -147,53 +147,59 @@
 	</div>
 	<div class="row-fluid pitch">
 	  <div class="span5 offset1 video">
-		<img class="img-polaroid" src="http://placehold.it/480x300">
+		<img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
 	  
 	  </div>
 
 	<!-- We define a new 'actions' div to contain statistics, order, and share button. -->
 	<div class="span5 actions">
-	  <div class="span8 offset2">
-		<div class="statistics">
-		  <div class="span4">
-			<!-- linediv-l and linediv-r give dividing lines that look different in horizontal
-			and vertical layouts, illustrating media queries. -->
-			<div class="linediv-l">
-			<h3>2</h3> <p>backers</p>
+	  <div class="row-fluid">
+	  	<div class="span8 offset2">
+			<div class="row-fluid statistics">
+		  		<div class="span4">
+				<!-- linediv-l and linediv-r give dividing lines that look different in horizontal
+				and vertical layouts, illustrating media queries. -->
+					<div class="linediv-l">
+						<h3>2</h3> <p>backers</p>
+					</div>
+		  		</div>
+		  		<div class="span4">
+					<div class="linediv-c">
+			  			<h3>$200</h3> <p>of $15,000</p>
+					</div>
+		  		</div>
+		  		<div class="span4">
+					<div class="linediv-r">
+						<h3>45</h3> <p>days left</p>
+					</div>
+		  		</div>
 			</div>
-		  </div>
-		  <div class="span4">
-			<div class="linediv-c">
-			  <h3>$200</h3> <p>of $15,000</p>
-			</div>
-		  </div>
-		  <div class="span4">
-			<div class="linediv-r">
-			<h3>45</h3> <p>days left</p>
-			</div>
-		  </div>
-		</div>
 	  </div>
-	  <div class="span10 offset1">
-		<!-- Bootstrap progress bar -->
-		<!-- http://twitter.github.io/bootstrap/components.html#progress -->
-		<div class="thermometer progress active">
-		  <div class="bar bar-success" style="width: 1.3%;"></div>
-		  <div class="bar bar-warning" style="width: 98.7%;"></div>
-	 	</div>
-	  </div>
-	  <div class="span6 offset3 order">
-		<!-- Standard Bootstrap button/ -->
-		<!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-		<button class="btn btn-success btn-large">Preorder</button>
-	  </div>
-	  <div class="span8 offset2 social">
-		<!-- Social buttons are not included in default Bootstrao. -->
-		<!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-		<a href ="https://twitter.com/specialparents" <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button></a>
-		<a href ="https:/www.facebook.com/specialparent" <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button></a>
-	  </div>
+	  <div class="row-fluid">
+	  	<div class="span10 offset1">
+			<!-- Bootstrap progress bar -->
+			<!-- http://twitter.github.io/bootstrap/components.html#progress -->
+			<div class="thermometer progress active">
+		  		<div class="bar bar-success" style="width: 1.3%;"></div>
+	  			<div class="bar bar-warning" style="width: 98.7%;"></div>
+	 		</div>
+	  	</div>
 	</div>
+	<div class="row-fluid">
+		<div class="span6 offset3 order">
+			<!-- Standard Bootstrap button/ -->
+			<!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
+			<button class="btn btn-success btn-large">Preorder</button>
+	  	</div>
+	  	<div class="span8 offset2 social">
+			<!-- Social buttons are not included in default Bootstrao. -->
+			<!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
+			<a href ="https://twitter.com/specialparents" <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button></a>
+			<a href ="https:/www.facebook.com/specialparent" <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button></a>
+	  	</div>
+	</div>
+  </div>
+  </div>
   </div>
 
   <!-- Beyond this part the marketing copty begins. -->
@@ -203,7 +209,7 @@
   <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
 	  <!-- <img class="img-polaroid" src="http://placehold.it/480x300"> -->
-	  <img class="img-polaroid" src="https://s3.amazonaws.com/sp_assets/images/stock-illustration-24867531-social-circles-1.jpg" alt="Community" width="480">
+	  <img class="img-polaroid" alt="Community" src="https://s3.amazonaws.com/sp_assets/images/stock-illustration-24867531-social-circles-1.jpg" width="480">
 	</div>
 	<div class="span5 copy">
 	  <h2>You're not alone.</h2>
@@ -229,7 +235,7 @@
 	</div>
 	<div class="span5 asset">
 	  <!-- <img class="img-polaroid" src="http://placehold.it/480x300"> -->
-	  <img class="img-polaroid" src="https://s3.amazonaws.com/sp_assets/images/stock-illustration-9023721-life-preserver-1.jpg">
+	  <img class="img-polaroid" alt="Life-preserver" src="https://s3.amazonaws.com/sp_assets/images/stock-illustration-9023721-life-preserver-1.jpg">
 	</div>
   </div>
 
