--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
 	.footer a {
 	  color: #ccccff;
 	}
+    /* http://support.addthis.com/customer/portal/questions/1136093-share-buttons-in-center-position */      
+ 	div.addthis_toolbox {
+  	width:280px;
+  	margin: 0 auto;
+ 	}
   </style>
 </head>
 
@@ -189,14 +194,22 @@
 		<div class="span6 offset3 order">
 			<!-- Standard Bootstrap button/ -->
 			<!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-			<button class="btn btn-success btn-large">Preorder</button>
+			<button class="btn btn-success btn-large">Donate</button>
 	  	</div>
-	  	<div class="span8 offset2 social">
-			<!-- Social buttons are not included in default Bootstrao. -->
-			<!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-			<a href ="https://twitter.com/specialparents" <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button></a>
-			<a href ="https:/www.facebook.com/specialparent" <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button></a>
-	  	</div>
+	  	<div class="span8 offset2 social">		
+			<!-- AddThis Button BEGIN -->
+			<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+				<a class="addthis_button_preferred_1"></a>
+				<a class="addthis_button_preferred_2"></a>
+				<a class="addthis_button_preferred_3"></a>
+				<a class="addthis_button_preferred_4"></a>
+				<a class="addthis_button_compact"></a>
+				<a class="addthis_counter addthis_bubble_style"></a>
+			</div>
+				<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+				<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4dcbda7902bccc31"></script>
+			<!-- AddThis Button END -->
+	  		</div>
 	</div>
   </div>
   </div>
