--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   
   <head>
     <meta charset="utf-8">
-    <title>SpecialParent</title>
+    <meta name="title" content="SpecialParent - The Special Needs Community">
+    <meta name="description" content="SpecialParent is a social network that connects parents of special needs children with other parents, therapists, caregivers and teachers. People use SpecialParent to search for IEP goals, get advovacy advice, share tips and ask for help. Join today. It's free and always will be."
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
 	<link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">    
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -207,7 +208,8 @@
 		<div class="span6 offset3 order">
 			<!-- Standard Bootstrap button/ -->
 			<!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-			<button class="btn btn-success btn-large">Donate</button>
+			<a class="coinbase-button" data-code="04767ca57ecaf583506f4d6ece0c9095" data-button-style="donation_large" href="https://coinbase.com/checkouts/04767ca57ecaf583506f4d6ece0c9095">Donate Bitcoins</a>
+			<script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 	  	</div>
 	  	<div class="span8 offset2 social">		
 			<!-- AddThis Button BEGIN -->
